Add benchmark and code cleanup
* Add benchmark which acts as the server part. Benchmarking itself is done via rust criterion.
* Code cleanup and reformatting