@@ -10,54 +10,53 @@ import jdk.incubator.vector.ByteVector;
 import jdk.incubator.vector.Vector;
 import jdk.incubator.vector.VectorOperators;
 
-public class ShuffleMaskFindOperationNoArray implements FindOperation{
+public class ShuffleMaskFindOperationNoArray implements FindOperation {
 
-	
-	private final ByteVector lowByteVec;
-	private final ByteVector highByteVec;
+
+    private final ByteVector lowByteVec;
+    private final ByteVector highByteVec;
 
 //	private final VectorSpecies<Byte> preferredSpecies;
 
-	private final ByteVector lowNibbleMask;
+    private final ByteVector lowNibbleMask;
 
-	private final ByteVector highNibbleMask;
+    private final ByteVector highNibbleMask;
 
-	private final ByteVector[] literalMasks;
-	
+    private final ByteVector[] literalMasks;
 
-	
-	public ShuffleMaskFindOperationNoArray( List<FindMask> findMasks) {
+
+    public ShuffleMaskFindOperationNoArray(List<FindMask> findMasks) {
 //		this.preferredSpecies = preferredSpecies;
-		this.lowByteVec =  ByteVector.broadcast(ByteVector.SPECIES_PREFERRED, 0x0f);
-		this.highByteVec = ByteVector.broadcast(ByteVector.SPECIES_PREFERRED, 0x7f);
+        this.lowByteVec = ByteVector.broadcast(ByteVector.SPECIES_PREFERRED, 0x0f);
+        this.highByteVec = ByteVector.broadcast(ByteVector.SPECIES_PREFERRED, 0x7f);
 
-		lowNibbleMask = ByteVector.fromArray(ByteVector.SPECIES_PREFERRED, 
-				Arrays.copyOf(findMasks.get(0).lowNibbleMask(),ByteVector.SPECIES_PREFERRED.vectorByteSize()), 0);
-		
-		highNibbleMask = ByteVector.fromArray(ByteVector.SPECIES_PREFERRED, 
-				Arrays.copyOf(findMasks.get(0).highNibbleMask(), ByteVector.SPECIES_PREFERRED.vectorByteSize()), 0);
+        lowNibbleMask = ByteVector.fromArray(ByteVector.SPECIES_PREFERRED,
+                Arrays.copyOf(findMasks.get(0).lowNibbleMask(), ByteVector.SPECIES_PREFERRED.vectorByteSize()), 0);
 
-    	literalMasks = findMasks.get(0).literals().values()
-    					.stream()
-                        .map(b -> ByteVector.broadcast(ByteVector.SPECIES_PREFERRED, b))
-                       .collect(Collectors.toList())
-                       .toArray(new ByteVector[] {});    	
-	}
-	
-	@Override
+        highNibbleMask = ByteVector.fromArray(ByteVector.SPECIES_PREFERRED,
+                Arrays.copyOf(findMasks.get(0).highNibbleMask(), ByteVector.SPECIES_PREFERRED.vectorByteSize()), 0);
+
+        literalMasks = findMasks.get(0).literals().values()
+                .stream()
+                .map(b -> ByteVector.broadcast(ByteVector.SPECIES_PREFERRED, b))
+                .toList()
+                .toArray(new ByteVector[]{});
+    }
+
+    @Override
     public ByteVector find(ByteVector inputVec, ByteVector accumulator) {
-		var vShuffleLow = lowNibbleMask.rearrange(inputVec.and(lowByteVec).toShuffle());
-        var vHighShiftedData = inputVec.lanewise(VectorOperators.LSHR,4).and(highByteVec);
+        var vShuffleLow = lowNibbleMask.rearrange(inputVec.and(lowByteVec).toShuffle());
+        var vHighShiftedData = inputVec.lanewise(VectorOperators.LSHR, 4).and(highByteVec);
         var vShuffleHigh = highNibbleMask.rearrange(vHighShiftedData.toShuffle());
-        var vTmp = vShuffleLow.and(vShuffleHigh);	
-        
+        var vTmp = vShuffleLow.and(vShuffleHigh);
+
         for (int i = 0; i < literalMasks.length; i++) {
-    		var vOnlyLiteral = vTmp.lanewise(VectorOperators.XOR, literalMasks[i]);
-    		var positions = vOnlyLiteral.compare(VectorOperators.EQ, 0);
-    		accumulator = accumulator.add(vTmp, positions);
-		}
+            var vOnlyLiteral = vTmp.lanewise(VectorOperators.XOR, literalMasks[i]);
+            var positions = vOnlyLiteral.compare(VectorOperators.EQ, 0);
+            accumulator = accumulator.add(vTmp, positions);
+        }
         return accumulator;
-   }
-    
+    }
+
 
 }
